PROJECT (SimpleFlowdockBot)

cmake_minimum_required(VERSION 2.6)

# This is in case we ever need to know if we were creating a VS or Xcode project
IF(CMAKE_GENERATOR MATCHES "Visual Studio 8")
  SET(GENERATING_IDE_MAKEFILE 1)
ELSEIF(CMAKE_GENERATOR MATCHES "Xcode")
  SET(GENERATING_IDE_MAKEFILE 1)
ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio 8")

IF(WIN32)
  ADD_DEFINITIONS( -D "_UNICODE")
  SET( CMAKE_MFC_FLAG 0 )
ENDIF(WIN32)

ADD_DEFINITIONS(-DCURL_STATICLIB)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.cpp)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_EXECUTABLE(SimpleFlowdockBot ${SOURCE_FILES} ${HEADERS} )

IF(WIN32)
   SET( OSSPECIFIC_LIBRARIES Htmlhelp ws2_32.lib winmm.lib wldap32.lib libeay32MDd.lib ssleay32MDd.lib pthreadVC2.lib )
ELSEIF(UNIX)
   SET( OSSPECIFIC_LIBRARIES pthread dl )
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(SimpleFlowdockBot curl JSONLib ${OSSPECIFIC_LIBRARIES} )
INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )
INCLUDE_DIRECTORIES(SimpleFlowdockBot .. ../FlowdockAPI/curl-7.19.2/include ../FlowdockAPI/FlowdockAPI ../FlowdockAPI/JSONLib ../pthread-w32/include)

IF(WIN32)
   SET_TARGET_PROPERTIES(SimpleFlowdockBot PROPERTIES VS_KEYWORD Qt4VSv1.0)
   SET_TARGET_PROPERTIES(SimpleFlowdockBot PROPERTIES COMPILE_FLAGS /Zc:wchar_t-)
ENDIF(WIN32)
